force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/clofor_com_cfs__LOCATOR__c.object-meta.xml
<CustomObject>
    <label>Locator</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>LOCATOR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locator</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>