force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__ActualOccupiedCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualOccupiedCapacityCBM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCCUPIED CAPACITY (CBM) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>