force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__AreaCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AreaCode__c</fullName>
    <inlineHelpText>Input A before number digit.</inlineHelpText>
    <label>AREA CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>