force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__BarCodeImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BarCodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=MECARD:N:&apos; + clofor_com_cfs__LocatorCode__c , &apos;Create Qr Code for this item&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOCATOR BAR CODE IMAGE</label>
    <type>Text</type>
</CustomField>