force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__CurrentAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrentAvailableCapacityKG__c</fullName>
    <formula>clofor_com_cfs__CapacityKG__c - clofor_com_cfs__CurrentOccupiedCapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(KG) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>