force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__CurrentOccupiedCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrentOccupiedCapacityKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCCUPIED CAPACITY (KG) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>