force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__FloorCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FloorCode__c</fullName>
    <defaultValue>&quot;F&quot;</defaultValue>
    <label>FLOOR CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>