force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__LocationAreaType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocationAreaType__c</fullName>
    <label>LOCATION AREA TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__AreaType</valueSetName>
    </valueSet>
</CustomField>