force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__LOCATOR_MANAGEMENT_RULE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LOCATOR_MANAGEMENT_RULE__c</fullName>
    <label>LOCATOR MANAGEMENT RULE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Turnover</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>