force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__LocatorDescription__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocatorDescription__c</fullName>
    <label>LOCATOR DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>