force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__ParentLocator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentLocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT LOCATOR</label>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipLabel>CHILD LOCATOR</relationshipLabel>
    <relationshipName>LocatorHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>