force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__PlannedCargoCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedCargoCBM__c</fullName>
    <label>PLANNED CARGO(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>