force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__PlannedCargoKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedCargoKG__c</fullName>
    <label>PLANNED CARGO(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>