force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__Rack__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Rack__c</fullName>
    <inlineHelpText>Input R before number digit.</inlineHelpText>
    <label>RACK CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>