force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__SectionCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SectionCode__c</fullName>
    <inlineHelpText>Input S before number digit.</inlineHelpText>
    <label>SECTION CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>