force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__Summary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Summary__c</fullName>
    <formula>clofor_com_cfs__LocatorCode__c &amp; &apos; - &apos; &amp;   text(clofor_com_cfs__LocationAreaType__c) 
&amp; &apos; - &apos; &amp; clofor_com_cfs__WarehouseID__r.clofor_com_cfs__FacilityName__c &amp; &apos; - &apos; &amp; Name</formula>
    <label>QR Display Summary</label>
    <type>Text</type>
</CustomField>