force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__Supplier__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUPPLIER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LACATOR (SUPPLIER)</relationshipLabel>
    <relationshipName>LacatorSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>