force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/fields/clofor_com_cfs__WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WarehouseID__c</fullName>
    <label>WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>LOCATOR</relationshipLabel>
    <relationshipName>Locator</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>