force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/recordTypes/clofor_com_cfs__SubLayer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SubLayer</fullName>
    <active>true</active>
    <description>Sub Layer is the layer has a parent layer.</description>
    <label>Sub Layer</label>
</RecordType>