force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/recordTypes/clofor_com_cfs__TopLayor.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__TopLayor</fullName>
    <active>true</active>
    <description>Top layer is the layer has no parent layer. It is set Floor as default.</description>
    <label>Top Layer</label>
</RecordType>