force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/validationRules/clofor_com_cfs__CapacityCBM_can_not_greater_than_parents.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__CapacityCBM_can_not_greater_than_parents</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(clofor_com_cfs__ParentLocator__c)),
OR(
AND(clofor_com_cfs__CapacityCBM__c &gt;  ( clofor_com_cfs__ParentLocator__r.clofor_com_cfs__CapacityCBM__c -  (clofor_com_cfs__ParentLocator__r.clofor_com_cfs__SharedCapacityCBM__c )),
OR(ISNEW(), ISCHANGED(clofor_com_cfs__ParentLocator__c))),

AND(OR(clofor_com_cfs__CapacityCBM__c &gt;  ( clofor_com_cfs__ParentLocator__r.clofor_com_cfs__CapacityCBM__c -  (clofor_com_cfs__ParentLocator__r.clofor_com_cfs__SharedCapacityCBM__c - clofor_com_cfs__CapacityCBM__c)), clofor_com_cfs__CapacityCBM__c &gt; clofor_com_cfs__ParentLocator__r.clofor_com_cfs__CapacityCBM__c), ISCHANGED(clofor_com_cfs__CapacityCBM__c))
))</errorConditionFormula>
    <errorMessage>Capacity CBM can not greater than Capacity CBM can be shared of parent locator.</errorMessage>
</ValidationRule>