force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/validationRules/clofor_com_cfs__Check_Locator_Code_Level_Layer.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Check_Locator_Code_Level_Layer</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clofor_com_cfs__LocatorLayer__c,&apos;Level Layer&apos;)&amp;&amp;(OR(clofor_com_cfs__FloorCode__c== &apos;F00&apos;, clofor_com_cfs__FloorCode__c== &apos;F&apos;,
ISBLANK(clofor_com_cfs__FloorCode__c),
clofor_com_cfs__AreaCode__c == &apos;A00&apos;, clofor_com_cfs__AreaCode__c == &apos;A&apos;,
ISBLANK(clofor_com_cfs__AreaCode__c),
clofor_com_cfs__SectionCode__c  == &apos;S00&apos;,
clofor_com_cfs__SectionCode__c  == &apos;S&apos;,
ISBLANK(clofor_com_cfs__SectionCode__c),
clofor_com_cfs__Rack__c == &apos;R00&apos;,
clofor_com_cfs__Rack__c == &apos;R&apos;,
ISBLANK(clofor_com_cfs__Rack__c ),
clofor_com_cfs__Level__c == &apos;L00&apos;,
clofor_com_cfs__Level__c == &apos;L&apos;,
ISBLANK(clofor_com_cfs__Level__c )))</errorConditionFormula>
    <errorMessage>Level layer must have  Floor Code and Area Code and Section Code and Rack Code and Level Code</errorMessage>
</ValidationRule>