force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/validationRules/clofor_com_cfs__Check_Locator_Layer.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Check_Locator_Layer</fullName>
    <active>true</active>
    <errorConditionFormula>Text(clofor_com_cfs__LocatorLayer__c) =  Text(clofor_com_cfs__ParentLocator__r.clofor_com_cfs__LocatorLayer__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__ParentLocator__c</errorDisplayField>
    <errorMessage>Parent Locator&apos;s Locator Layer must be different from the record&apos;s</errorMessage>
</ValidationRule>