force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/validationRules/clofor_com_cfs__Check_Warehouse.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Check_Warehouse</fullName>
    <active>true</active>
    <description>warehouse must be the same with parents Locator</description>
    <errorConditionFormula>NOT(ISBLANK(clofor_com_cfs__ParentLocator__c))&amp;&amp;  clofor_com_cfs__WarehouseID__c !=  clofor_com_cfs__ParentLocator__r.clofor_com_cfs__WarehouseID__c</errorConditionFormula>
    <errorMessage>Warehouse must be the same with parents Locator.</errorMessage>
</ValidationRule>