force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/validationRules/clofor_com_cfs__Required_Parent_Locator.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Required_Parent_Locator</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(clofor_com_cfs__LocatorLayer__c,&apos;Floor Layer&apos;)) &amp;&amp;
 ISBLANK(clofor_com_cfs__ParentLocator__c)</errorConditionFormula>
    <errorMessage>Parents Locator is required.</errorMessage>
</ValidationRule>