force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WarehouseID__c</columns>
    <columns>clofor_com_cfs__LocationAreaType__c</columns>
    <columns>clofor_com_cfs__LocatorDescription__c</columns>
    <columns>clofor_com_cfs__LocatorCode__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__LOCATOR_MANAGEMENT_RULE__c</columns>
    <columns>clofor_com_cfs__FastSlowClassification__c</columns>
    <columns>clofor_com_cfs__SKU__c</columns>
    <columns>clofor_com_cfs__CapacityCBM__c</columns>
    <columns>clofor_com_cfs__CapacityKG__c</columns>
    <columns>clofor_com_cfs__ChargeType__c</columns>
    <columns>clofor_com_cfs__Tenant__c</columns>
    <columns>clofor_com_cfs__Buyer__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
    <language>en_US</language>
</ListView>