force-app/main/default/objects/clofor_com_cfs__LOCATOR__c/listViews/clofor_com_cfs__LocatorSearch.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__LocatorSearch</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WarehouseID__c</columns>
    <columns>clofor_com_cfs__LocationAreaType__c</columns>
    <columns>clofor_com_cfs__LocatorDescription__c</columns>
    <columns>clofor_com_cfs__Active__c</columns>
    <columns>clofor_com_cfs__LocatorCode__c</columns>
    <columns>clofor_com_cfs__Tenant__c</columns>
    <columns>clofor_com_cfs__Supplier__c</columns>
    <columns>clofor_com_cfs__Buyer__c</columns>
    <columns>clofor_com_cfs__SKU__c</columns>
    <columns>clofor_com_cfs__ChargeType__c</columns>
    <columns>clofor_com_cfs__FastSlowClassification__c</columns>
    <columns>clofor_com_cfs__ActualAvailableCapacityCBM__c</columns>
    <columns>clofor_com_cfs__ActualAvailableCapacityKG__c</columns>
    <filterScope>Everything</filterScope>
    <label>☘LOCATOR SEARCH☘</label>
    <language>en_US</language>
</ListView>